# dse

./: .gitignore  Makefile  hello_milvus.py  pyproject.toml  readme.md
app/: collection.py  config.py  embedding.py  routes.py  service.py  setup.py
app/api/ads/insert/: handler.py
app/api/ads/search/: handler.py
app/collections/: ads.py
app/schemas/: ads.py
app/scripts/: create_collection_ads.py  insert_ads.py
